Add Exclusive Showcase feature for promotional display without prices

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -23,6 +23,7 @@
   "nav": {
     "home": "Home",
     "products": "Products",
+    "showcase": "Showcase",
     "about": "About",
     "contact": "Contact",
     "faq": "FAQ",
