--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -23,6 +23,7 @@
   "nav": {
     "home": "Beranda",
     "products": "Produk",
+    "showcase": "Showcase",
     "about": "Tentang",
     "contact": "Kontak",
     "faq": "FAQ",
